# veryfi-invoice-extractor

./: .env.example  .gitignore  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
scripts/: 00-eval_determinism.py  01-fetch_all.py  02-process.py  sandbox.py
src/veryfi_invoice_extractor/: __init__.py  client.py  parser.py  paths.py  validator.py
tests/: conftest.py  test_client.py  test_parser.py  test_validator.py
tests/fixtures/: non_switch_ocr.txt  switch_ocr_sample.txt
